--- a/translation-demo/src/app/app.component.html
+++ b/translation-demo/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div>
-  <h1>{{ 'demo.title' | translate }}</h1>
+  <!-- <h1>{{ 'demo.title' | translate }}</h1> -->
 
   <!-- translation: translation pipe -->
-  <p>{{ 'demo.text' | translate }}</p>
+  <!-- <p>{{ 'demo.text' | translate }}</p> -->
+
+  <!-- {{accountNumber | accountFromat}} -->
 
   <button (click)="useLanguage('en')">en</button>
   <button (click)="useLanguage('de')">de</button>
