--- a/translation-demo/src/app/app.component.html
+++ b/translation-demo/src/app/app.component.html
@@ -5,7 +5,7 @@
   <!-- <p>{{ 'demo.text' | translate }}</p> -->
 
   <!-- {{accountNumber | accountFromat}} -->
-
-  <button (click)="useLanguage('en')">en</button>
-  <button (click)="useLanguage('de')">de</button>
+  <app-alert></app-alert>
+  <a routerLink="/inv">Invoice</a>  
+  <router-outlet></router-outlet>  
 </div>
